--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@clerk/nextjs": "^6.18.0",
     "@prisma/client": "^6.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "chart.js": "^4.4.9",
     "next": "^15.2.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "zod": "^3.24.2"
   },
