--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "chart.js": "^4.4.9",
     "next": "^15.2.3",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
+    "fs": "^0.0.1-security",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
