--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
