--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@t3-oss/env-nextjs": "^0.12.0",
     "chart.js": "^4.4.9",
+    "dotenv": "^16.5.0",
     "next": "^15.3.2",
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
