--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-table": "^8.21.3",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "dotenv": "^16.5.0",
