modified landing page

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.60.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.6",
